Combobox: fix for icon stretching (#409)

--- a/src/less/combobox/ds6/combobox.less
+++ b/src/less/combobox/ds6/combobox.less
@@ -28,6 +28,8 @@
 
         & + span.combobox__icon {
             .icon-chevron-down-disabled(9px, @ds6-combobox-height);
+
+            background-size: 9px 5px;
         }
     }
 
@@ -42,6 +44,8 @@
 
 span.combobox__icon {
     .icon-chevron-down-bold(9px, @ds6-combobox-height);
+
+    background-size: 9px 5px;
 }
 
 @media screen and (-ms-high-contrast: white-on-black) {
@@ -59,5 +63,7 @@ span.combobox__icon {
 
     span.combobox__icon {
         .icon-chevron-down-bold(9px, @ds6-combobox-height + 8px);
+
+        background-size: 9px 5px;
     }
 }
